refactor(logger): use text file for cacheing
